# weiche

./: .coveragerc  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/source/: CHANGELOG.rst  conf.py  index.rst
docs/source/modules/: index.rst
src/schiene_next/: __init__.py  objects.py  schiene.py  version.py
src/schiene_next/api/: api.py  asynchronous.py  base.py  parser.py  synchronous.py
src/schiene_next/tests/: test_asynchronous.py  test_schiene.py  test_synchronous.py
