[build-system]
requires = ['setuptools', 'setuptools_scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'schiene-next'
description = '##### ToDo: Rewrite me #####'
readme = 'README.rst'
license = {file = 'LICENSE'}
authors = [{name='Christoph Brand', email='christoph+pypi@brand.rest'}]
dependencies = [
    "pydantic>=2,<3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT No Attribution License (MIT-0)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = '>=3.10'
dynamic = ['version']

[project.scripts]
#schiene-next = 'schiene_next.commands:main'

[tools.setuptools]
package-dir = {'' = 'src'}

[tools.setuptools.dynamic]
version = {attr = 'schiene_next.version.version'}

[tool.setuptools_scm]
write_to = 'src/schiene_next/version.py'
version_scheme = 'python-simplified-semver'
local_scheme = 'no-local-version'

[project.urls]
'Homepage' = 'None'

[project.optional-dependencies]
test=[
    'pytest',
    'pytest-asyncio',
    'tox',
    'requests',
    'aiohttp'
]
doc = ['sphinx']
sync = ['requests']
async = ['aiohttp']

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
line_length=120
multi_line_output=3
include_trailing_comma="True"
use_parentheses="True"
force_grid_wrap=0
known_first_party="xcnt"

[tool.semantic_release]
version_variables = ["setup.py:__version__"]
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
build_command = "python setup.py sdist bdist_wheel"

[tool.semantic_release.branches.main]
match = "(main|master)"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
